[tool.poetry]
name = "poetry-test-init"
version = "0.1.0"
description = "ะthis is the poetry init tested by book intern at Data Cafe"
authors = ["Book2 at DataCafe"]
readme = "README.md"
packages = [{include = "poetry_test_init"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
numpy = "^1.24.3"
selenium = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
